Bug 1958651, don't create temporary DOMMatrixReadonly when calling addPath,  r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D244534